- ruutu.fi uses rtmpe for some videos.
- Stream low bandwidth Youtube videos by default (configurable in
  /etc/webvi.conf)
- Fixed Google video module.
- Disabled ruutu.fi search which is not working.

2010-11-18: Version 0.4.0

- SVDRP commands for playing and downloading videos (based on a patch
  by Matti Lehtimäki).
- Bookmarklet for sending a video from web browser to VDR.
- Correct template path in webvi.plugin.conf, respect user CXXFLAGS,
  SYSLIBDIR and DESTDIR in Makefiles, fix typos (patches by Ville
  Skyttä).
- Support VDR 1.7 series by including Make.global.
- Command line arguments override config file options.
- Fixes for Youtube, Metacafe and Google modules.

2011-04-17: Version 0.4.1

- Fixed Youtube, Metacafe and Vimeo modules. Streaming does not work
  on Vimeo.
- Removed SVT Play module which was not working anymore.
- Accept -p as alternative to --postprocess (thanks to Matti
  Lehtimäki).
- New option --prefermplayer prefers mplayer over xineliboutput when
  streaming (thanks to Matti Lehtimäki).
- Bookmarklet for saving a video from the web browser (a patch by
  Samuli Sorvakko).
- Updated Italian translation (thanks to Diego Pierotto)
- New option --verbose (webvi)
- New option --vfat (or vfat in config file) generates Windows
  compatible filenames (plugin, webvi)

2011-06-12: Version 0.4.2

- Fixed katsomo.fi module.
- Watch on vdr bookmarklet now works also on katsomo.fi.
- webvi: Space in search terms was errornously replaced by plus.

2011-07-12: Version 0.4.3

- Streaming works on YLE Areena and on other sources which use
  external downloaders (playback in VLC does not work very well)
- Prefer mplayer over VLC when playing streams
- Fixed "Error 501: No active sockets" by properly implementing
  timeouts
- Improved ruutu.fi support

2011-08-08: Version 0.4.4

- Fixed Youtube support
- Minor improvements in Katsomo and ruutu.fi support
- Disabled broken Vimeo search

2012-01-29: Version 0.4.5

- Fixed Youtube breakage